Mais alguns implementos porém ainda bugado

--- a/cadastro.html
+++ b/cadastro.html
@@ -50,7 +50,7 @@
                   </div>
               </form>
               <div class="text-center mt-3">
-                  <p>Já tem uma conta? <a href="login.html">Login</a></p>
+                  <p>Já tem uma conta? <a href="index.html">Login</a></p>
               </div>
           </div>
       </div>
