--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container d-flex align-items-center justify-content-center min-vh-100">
       <div class="card shadow p-4" style="width: 400px;">
         <div class="card-body text-center">
-          <img src="./img/logo.png" alt="To-Do List Logo" width="100" class="mb-4">
+          <img src="./img/logo.png" alt="Todo List Logo" width="100" class="mb-4">
           <form onsubmit="event.preventDefault(); login();">
             <div class="mb-3">
               <label for="username" class="form-label">Username</label>
