--- a/fazendo.html
+++ b/fazendo.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas a Fazer</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,17 +18,17 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="./principal.html">Home</a>
           </li> 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Tarefas
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">To do</a></li>
-              <li><a class="dropdown-item" href="#">In progress</a></li>
+              <li><a class="dropdown-item" href="./Todo.html">A fazer</a></li>
+              <li><a class="dropdown-item" href="#">Fazendo</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Done</a></li>
+              <li><a class="dropdown-item" href="#">Finalizado</a></li>
             </ul>
           </li>
         </ul>
@@ -42,7 +41,7 @@
   </nav>
 
   <div style="background: #F2E7D8;" class="shadow rounded m-5 container mx-auto p-2 card text-center">
-    <div id="card-header" class="card-header" style="border-radius: 5px; background: #FFD049;">
+    <div id="card-header" class="card-header" style="border-radius: 5px; background: #8E2D2B;">
       Tarefas a fazer | 0
     </div>
     <div class="card-body">
@@ -58,7 +57,7 @@
     </div>
   </div>
 </body>
-<script src="./js/main.js"></script>
+<script src="./js/todo.js"></script>
 <script src="https://kit.fontawesome.com/ca72c7a493.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
