--- a/principal.html
+++ b/principal.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página principal - Todo List</title>
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./img/logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -40,8 +39,8 @@
                             Tarefas
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="tasks.html">A Fazer</a></li>
-                            <li><a class="dropdown-item" href="#">Fazendo</a></li>
+                            <li><a class="dropdown-item" href="Todo.html">A Fazer</a></li>
+                            <li><a class="dropdown-item" href="./fazendo.html">Fazendo</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="#">Finalizado</a></li>
                         </ul>
@@ -56,11 +55,15 @@
             <!-- Card 1 - Outros conteúdos -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title 1</h5>
-                        <p class="card-text">
-                            Conteúdo de exemplo.
-                        </p>
+                    <div class="card-body rounded" style="background: #8E2D2B;">
+                        <h5 class="card-title">Tarefas a Fazer</h5>
+                        <ul class="list-group list-group-flush " id="task-list">
+                            <!-- Tarefas vão aparecer aqui -->
+                            <li class="list-group-item">Carregando tarefas...</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="Todo.html" class="card-link">Gerenciar tarefas</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -68,16 +71,17 @@
             <!-- Card 2 - Tarefas a Fazer -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Tarefas a Fazer</h5>
-                        <ul class="list-group list-group-flush" id="task-list">
+                    <div class="card-body rounded" style="background: #ffd049;">
+                        <h5 class="card-title">Tarefas Sendo Feitas</h5>
+                        <ul class="list-group list-group-flush" id="task-list-ongoing">
                             <!-- Tarefas vão aparecer aqui -->
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
+                        <div class="card-body">
+                            <a href="fazendo.html" class="card-link">Gerenciar tarefas</a>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <a href="to-do.html" class="card-link">Gerenciar tarefas</a>
-                    </div>
+                    
                 </div>
             </div>
 
@@ -85,10 +89,14 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
                     <div class="card-body">
-                        <h5 class="card-title">Card title 3</h5>
-                        <p class="card-text">
-                            Conteúdo de exemplo.
-                        </p>
+                        <h5 class="card-title">Tarefas Finalizadas</h5>
+                        <ul class="list-group list-group-flush" id="task-list-done">
+                            <!-- Tarefas vão aparecer aqui -->
+                            <li class="list-group-item">Carregando tarefas...</li>
+                        </ul>
+                        <div class="card-body">
+                            <a href="finalizadas.html" class="card-link">Gerenciar tarefas</a>
+                        </div>
                     </div>
                 </div>
             </div>
