Quase acabando só falta um ou outro bug pra concertar e implementar mais algumas coisas

--- a/Todo.html
+++ b/Todo.html
@@ -9,7 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body style="background: #F2E7D8;">
-  <nav class="navbar navbar-expand-lg" style="background: #FFD049;">
+  <nav class="navbar navbar-expand-lg" style="background: #8E2D2B;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="./img/logo.png" style="width: 50px; height: 50px;" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +26,9 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="./Todo.html">A fazer</a></li>
-              <li><a class="dropdown-item" href="#">Fazendo</a></li>
+              <li><a class="dropdown-item" href="./fazendo.html">Fazendo</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Finalizado</a></li>
+              <li><a class="dropdown-item" href="./finalizadas.html">Finalizado</a></li>
             </ul>
           </li>
         </ul>
@@ -41,7 +41,7 @@
   </nav>
 
   <div style="background: #F2E7D8;" class="shadow rounded m-5 container mx-auto p-2 card text-center">
-    <div id="card-header" class="card-header" style="border-radius: 5px; background: #FFD049;">
+    <div id="card-header" class="card-header" style="border-radius: 5px; background: #8E2D2B;">
       Tarefas a fazer | 0
     </div>
     <div class="card-body">
