--- a/principal.html
+++ b/principal.html
@@ -42,7 +42,7 @@
                             <li><a class="dropdown-item" href="Todo.html">A Fazer</a></li>
                             <li><a class="dropdown-item" href="./fazendo.html">Fazendo</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#">Finalizado</a></li>
+                            <li><a class="dropdown-item" href="./finalizadas.html">Finalizado</a></li>
                         </ul>
                     </li>
                 </ul>
