--- a/finalizadas.html
+++ b/finalizadas.html
@@ -9,7 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body style="background: #F2E7D8;">
-  <nav class="navbar navbar-expand-lg" style="background: #FFD049;">
+  <nav class="navbar navbar-expand-lg" style="background: #05BC45;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="./img/logo.png" style="width: 50px; height: 50px;" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
   </nav>
 
   <div style="background: #F2E7D8;" class="shadow rounded m-5 container mx-auto p-2 card text-center">
-    <div id="card-header" class="card-header" style="border-radius: 5px; background: #FFD049;">
+    <div id="card-header" class="card-header" style="border-radius: 5px; background: #05BC45;">
       Tarefas a fazer | 0
     </div>
     <div class="card-body">
@@ -57,7 +57,7 @@
     </div>
   </div>
 </body>
-<script src="./js/fazendo.js"></script>
+<script src="./js/finalizadas.js"></script>
 <script src="https://kit.fontawesome.com/ca72c7a493.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
