Tela das tarefas finalizadas concluida

--- a/principal.html
+++ b/principal.html
@@ -62,7 +62,7 @@
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="Todo.html" class="card-link">Gerenciar tarefas</a>
+                            <a href="Todo.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="fazendo.html" class="card-link">Gerenciar tarefas</a>
+                            <a href="fazendo.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                     
@@ -88,14 +88,14 @@
             <!-- Card 3 - Outros conteúdos -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
-                    <div class="card-body">
+                    <div class="card-body rounded" style="background: #05BC45;">
                         <h5 class="card-title">Tarefas Finalizadas</h5>
                         <ul class="list-group list-group-flush" id="task-list-done">
                             <!-- Tarefas vão aparecer aqui -->
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="finalizadas.html" class="card-link">Gerenciar tarefas</a>
+                            <a href="finalizadas.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                 </div>
