--- a/finalizadas.html
+++ b/finalizadas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarefas a Fazer</title>
+    <title>Tarefas Finalizadas</title>
     <link rel="icon" href="./img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -42,7 +42,7 @@
 
   <div style="background: #F2E7D8;" class="shadow rounded m-5 container mx-auto p-2 card text-center">
     <div id="card-header" class="card-header" style="border-radius: 5px; background: #05BC45;">
-      Tarefas a fazer | 0
+      Tarefas Finalizadas | 0
     </div>
     <div class="card-body">
       <div id="lista" class="row row-cols-1 row-cols-md-3 g-4">
