--- a/principal.html
+++ b/principal.html
@@ -11,6 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body style="background: #f2e7d8">
     <nav class="navbar navbar-expand-lg" style="background: #ffd049">
@@ -50,9 +51,9 @@
         </div>
     </nav>
 
-    <div class="container my-5">
+    <div class="container my-5 ">
         <div class="row">
-            <!-- Card 1 - Outros conteúdos -->
+            <!-- Card 1 - Tarefas A Fazer -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
                     <div class="card-body rounded" style="background: #8E2D2B;">
@@ -62,13 +63,13 @@
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="Todo.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
+                            <a href="Todo.html" class="gerenc-tarefas card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Card 2 - Tarefas a Fazer -->
+            <!-- Card 2 - Tarefas Sendo Feitas -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
                     <div class="card-body rounded" style="background: #ffd049;">
@@ -78,14 +79,14 @@
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="fazendo.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
+                            <a href="fazendo.html" class="gerenc-tarefas card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                     
                 </div>
             </div>
 
-            <!-- Card 3 - Outros conteúdos -->
+            <!-- Card 3 - Tarefas Finalizadas -->
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card shadow mb-4">
                     <div class="card-body rounded" style="background: #05BC45;">
@@ -95,7 +96,7 @@
                             <li class="list-group-item">Carregando tarefas...</li>
                         </ul>
                         <div class="card-body">
-                            <a href="finalizadas.html" class="card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
+                            <a href="finalizadas.html" class="gerenc-tarefas card-link card-link-outline" style="text-decoration: none;">Gerenciar tarefas</a>
                         </div>
                     </div>
                 </div>
