Validação dos campos de cadastrar

--- a/cadastro.html
+++ b/cadastro.html
@@ -34,7 +34,7 @@
             <img src="./img/logo.png" alt="" width="150" height="150" class="d-block mx-auto mb-4">
               <form onsubmit="event.preventDefault(); register();">
                   <div class="mb-3">
-                      <label for="username" class="form-label">Username</label>
+                      <label for="username" class="form-label">Nome de Usuário</label>
                       <input type="text" class="form-control" id="username" placeholder="Digite seu username">
                   </div>
                   <div class="mb-3">
@@ -43,7 +43,7 @@
                   </div>
                   <div class="mb-3">
                       <label for="password" class="form-label">Senha</label>
-                      <input type="password" class="form-control" id="password" placeholder="Digite sua senha">
+                      <input type="password" class="form-control" id="password" name="password" placeholder="Digite sua senha">
                   </div>
                   <div class="d-grid gap-2">
                       <button type="submit" class="btn btn-primary">Cadastrar</button>
