--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="./img/logo.png" alt="Todo List Logo" width="100" class="mb-4">
           <form onsubmit="event.preventDefault(); login();">
             <div class="mb-3">
-              <label for="username" class="form-label">Username</label>
+              <label for="username" class="form-label">Nome de Usuário</label>
               <input type="text" class="form-control" id="username" placeholder="Digite seu username">
             </div>
             <div class="mb-3">
