--- a/Todo.html
+++ b/Todo.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body style="background: #F2E7D8;">
   <nav class="navbar navbar-expand-lg" style="background: #8E2D2B;">
@@ -24,7 +25,7 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Tarefas
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-class">
               <li><a class="dropdown-item" href="./Todo.html">A fazer</a></li>
               <li><a class="dropdown-item" href="./fazendo.html">Fazendo</a></li>
               <li><hr class="dropdown-divider"></li>
@@ -32,9 +33,9 @@
             </ul>
           </li>
         </ul>
-       <form class="d-flex" style="width: 500px;" role="search" onsubmit="event.preventDefault(); adicionar();">
-  <input id="add" class="form-control me-2 w-100" type="search" placeholder="Digite a tarefa que deseja adicionar" aria-label="Search">
-  <button id="btn-action" class="btn btn-outline-dark" type="submit">Adicionar</button>
+       <form class="form" role="search" onsubmit="event.preventDefault(); adicionar();">
+  <input id="add" class="add form-control me-2 w-100" type="search" placeholder="Digite a tarefa que deseja adicionar" aria-label="Search">
+  <button id="btn-action" class="btn-add btn btn-outline-dark" type="submit">Adicionar</button>
 </form>
       </div>
     </div>
